# Firefox

./: CLOBBER  Cargo.toml  Makefile.in  build.gradle  eslint-file-globals.config.mjs  eslint-ignores.config.mjs  eslint-rollouts.config.mjs  eslint-test-paths.config.mjs  eslint.config.mjs  gradle.properties  mots.yaml  moz.build  package-lock.json  package.json  pyproject.toml  settings.gradle  stylelint-rollouts.config.js
accessible/: moz.build
browser/: moz.build
caps/: OriginAttributes.cpp  moz.build  nsIScriptSecurityManager.idl  nsScriptSecurityManager.cpp
config/: check_spidermonkey_style.py  config.mk  milestone.txt  rules.mk  system-headers.mozbuild
devtools/: .eslintrc.mjs
docs/: conf.py
dom/: metrics.yaml  pings.yaml
editor/: nsIHTMLEditor.idl
gfx/: moz.build
gfx/wr/wrshell/: .gitignore  Cargo.toml  README.md  default-layout.ini
gfx/wr/wrshell/src/: cli.rs  command.rs  debug_commands.rs  gui.rs  main.rs  net.rs
gradle/: libs.versions.toml
image/: BlobSurfaceProvider.h  Downscaler.cpp  Downscaler.h  DownscalingFilter.h  SVGDocumentWrapper.cpp  SVGDocumentWrapper.h  SurfaceCache.cpp  VectorImage.cpp  imgLoader.cpp  imgRequestProxy.cpp  imgRequestProxy.h  moz.build
js/: moz.configure
layout/: .clang-format
mfbt/: AllocPolicy.h  Assertions.h  Attributes.h  BitSet.h  BoundedMPSCQueue.h  DoublyLinkedList.h  FloatingPoint.h  HashTable.h  MathAlgorithms.h  MaybeOneOf.h  MulOverflowMask.h  SHA1.h  SmallPointerArray.h  Tainting.h  UniquePtr.h  UniquePtrExtensions.h  Variant.h  Vector.h  moz.build
netwerk/: metrics.yaml
netwerk/base/uritemplate_glue/: Cargo.toml  UriTemplate.h  cbindgen.toml  moz.build
netwerk/base/uritemplate_glue/src/: lib.rs
nsprpub/: TAG-INFO
remote/: jar.mn  mach_commands.py
security/: mach_commands.py  moz.build  nss.symbols
startupcache/: StartupCache.cpp
storage/: metrics.yaml  mozStorageConnection.cpp
supply-chain/: audits.toml  (+1 more)
xpcom/rust/gecko_tracing/: Cargo.toml
xpcom/rust/gecko_tracing/src/: lib.rs
(+17334 files in other folders)
