[package]
name = "wrshell"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[workspace]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [ "blocking" ] }
webrender_api = { path = "../webrender_api", features = [ "debugger" ] }
tungstenite = "0.27.0"
argh = "0.1"
serde = { version="1", features = ["derive"] }
serde_json = "1"
strprox = "0.3.3"
repl-ng = "0.3"

imgui-sdl3 = { git = "https://github.com/florianvazelle/imgui-sdl3" }
imgui = { version="0.12", features = [ "docking" ] }
sdl3 = "0.14"

[patch.crates-io]
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
