[package]
name = "gecko_tracing"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }
tracing-support = "0.1" # an app-services crate, overridden in the `[patch.crates-io]` section of the top-level Cargo.toml
